# cloudfang

./: .env.example  Cargo.toml  README.md
.agent/workflows/: rust.md
cloudfangproject/: .dockerignore  .gitignore  AI_AGENT_GUIDE.md  AI_RULES.md  Cargo.toml  Dockerfile  README.md  cloudfang.toml.example  cloudfang_implementation_plan.md
cloudfangproject/crates/: .gitignore
cloudfangproject/crates/cloudfang-cli/src/: main.rs
cloudfangproject/crates/cloudfang-core/: Cargo.toml
cloudfangproject/crates/cloudfang-core/src/: agent.rs  config.rs  lib.rs  llm.rs  ops_tools.rs  tools.rs
cloudfangproject/crates/cloudfang-hands/: Cargo.toml
cloudfangproject/crates/cloudfang-hands/src/: backup.rs  lib.rs  monitor.rs  remediate.rs  scale.rs
cloudfangproject/crates/cloudfang-ops/: Cargo.toml
cloudfangproject/crates/cloudfang-ops/src/: glance.rs  heat.rs  lib.rs  neutron.rs  nova.rs
cloudfangproject/crates/cloudfang-ops/tests/: auth_mock_test.rs
cloudfangproject/crates/cloudfang-store/: Cargo.toml
cloudfangproject/crates/cloudfang-store/src/: lib.rs  models.rs
cloudfangproject/src/: main.rs
crates/cloudfang-cli/: Cargo.toml
crates/cloudfang-cli/src/: main.rs
crates/cloudfang-core/src/: agent.rs  config.rs  scheduler.rs  tools.rs
crates/cloudfang-hands/: Cargo.toml
crates/cloudfang-hands/src/: backup.rs  remediate.rs  scale.rs
crates/cloudfang-ops/src/: cinder.rs  keystone.rs  metrics.rs
crates/cloudfang-store/src/: lib.rs
