[workspace]
members = [
    "crates/cloudfang-core",
    "crates/cloudfang-ops",
    "crates/cloudfang-hands",
    "crates/cloudfang-store",
    "crates/cloudfang-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
# Async Runtime
tokio = { version = "1.36", features = ["full"] }

# HTTP Client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# LLM Client
async-openai = "0.23"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Time
chrono = { version = "0.4", features = ["serde"] }
cron = "0.13"

# Error Handling & Logging
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
dotenvy = "0.15"
uuid = { version = "1.7", features = ["v4", "serde"] }
async-trait = "0.1"

# Internal crates
cloudfang-core = { path = "crates/cloudfang-core" }
cloudfang-ops = { path = "crates/cloudfang-ops" }
cloudfang-hands = { path = "crates/cloudfang-hands" }
cloudfang-store = { path = "crates/cloudfang-store" }
