[package]
name = "cloudfang-hands"
description = "Autonomous SysOps Hands for CloudFang"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
uuid.workspace = true

cloudfang-ops.workspace = true
cloudfang-store.workspace = true
reqwest = { workspace = true, features = ["json"] }
