[package]
name = "cloudfang-ops"
description = "OpenStack API client for CloudFang"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true

[dev-dependencies]
mockito = "1.7.2"
