[package]
name = "cloudfang-store"
description = "SQLite persistence layer for CloudFang"
version.workspace = true
edition.workspace = true

[dependencies]
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
